--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
     <img src="https://i.imgur.com/2kZ11MU.jpeg" alt="Ảnh dễ thương">
     <h1>🎂 Thiệp Mời Sinh Nhật 🎂</h1>
     
+    <!-- Phần kính mời bạn -->
+    <p><strong>Kính mời bạn:</strong> [Tên Người Mời]</p>
+    
     <p>Vào lúc <strong>5 giờ chiều, Thứ 4 ngày 9/4/2025</strong></p>
     <p>Địa điểm: <strong>nhà Trí</strong></p>
     <p>Rất mong bạn đến chung vui! 🥳</p>
@@ -155,4 +158,3 @@
   </div>
 </body>
 </html>
-
