--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- Thay thế đường dẫn ảnh ở đây -->
     <img src="https://i.imgur.com/2kZ11MU.jpeg" alt="Ảnh dễ thương">
     <h1>🎂 Thiệp Mời Sinh Nhật 🎂</h1>
-    <div class="guest-name">Kính mời: <span>Gia Tường</span></div>
+    <div class="guest-name">Thân Mời Bạn
     <p>Vào lúc <strong>5 giờ chiều, Thứ 4 ngày 9/4/2025</strong></p>
     <p>Địa điểm: <strong>nhà Trí</strong></p>
     <p>Rất mong bạn đến chung vui! 🥳</p>
